syntax = "proto3";
package routerprotocol.routerchain.attestation;

option go_package = "github.com/router-protocol/router-chain/x/attestation/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// ClaimType is the cosmos type of an event from the counterpart chain that can
// be handled

enum ClaimType {
  option (gogoproto.goproto_enum_prefix) = false;

  CLAIM_TYPE_UNSPECIFIED              = 0;
  CLAIM_TYPE_INBOUND_REQUEST          = 1;
  CLAIM_TYPE_OUTBOUND_ACK_REQUEST     = 2;
  CLAIM_TYPE_VALSET_UPDATED           = 3;
}