syntax = "proto3";
package routerprotocol.routerchain.crosstalk;

option go_package = "github.com/router-protocol/sdk-go/routerchain/crosstalk/types";

import "crosstalk/crosstalk_ack_receipt_status.proto"; 
import "multichain/chain_type.proto"; 
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";


message CrossTalkAckReceipt {
  uint64 eventNonce = 1; 
  uint64 blockHeight = 2; 
  string relayerRouterAddress = 3; 
  routerprotocol.routerchain.multichain.ChainType chainType = 4; 
  string chainId = 5; 
  string txHash = 6; 
  cosmos.base.v1beta1.Coin feeConsumedInRoute = 7 [(gogoproto.nullable) = false];
  uint64 eventIdentifier = 8;  
  CrossTalkAckReceiptStatus status = 9;     
}


message CrossTalkAckReceiptClaimHash {
  uint64 eventNonce = 1; 
  uint64 blockHeight = 2; 
  string relayerRouterAddress = 3; 
  routerprotocol.routerchain.multichain.ChainType chainType = 4; 
  string chainId = 5; 
  string txHash = 6; 
  uint64 eventIdentifier = 7;  
}
