syntax = "proto3";
package routerprotocol.routerchain.outbound;


option go_package = "github.com/router-protocol/sdk-go/routerchain/outbound/types";
import "outbound/outgoing_tx_status.proto"; 
import "outbound/contract_call.proto";
import "multichain/chain_type.proto"; 
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";


message EventOutgoingBatchTxCreated {
  uint64 outgoing_tx_nonce = 1; 
  routerprotocol.routerchain.multichain.ChainType destinationChainType = 2;
  string destinationChainId = 3; 
  repeated ContractCall contractCalls = 4 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin relayerFee = 5 [(gogoproto.nullable) = false];
  uint64 destinationGasLimit = 6;
  uint64 destinationGasPrice = 7; 
  cosmos.base.v1beta1.Coin outgoingTxFeeInRoute = 8 [(gogoproto.nullable) = false]; 
  uint64 outboundAckGasLimit = 9;
  bool isAtomic = 10; 
  string sourceAddress = 11; 
  uint64 chainTimestamp = 12;
  int64 expiryTimestamp = 13; 
  OutgoingTxStatus status = 14; 
  string route_amount = 15 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  bytes route_recipient = 16;
  bytes asmAddress = 17;
}

message EventOutgoingBatchTxConfirm {  
  routerprotocol.routerchain.multichain.ChainType destinationChainType = 1;  
  string destinationChainId = 2; 
  string outgoingBatchSender = 3; 
  uint64 outgoingBatchNonce = 4; 
  string ethSigner = 5; 
  string signature = 6; 
  string orchestrator = 7;
}

message EventOutgoingAckCreated {  
  bytes attestation_id = 1;
  routerprotocol.routerchain.multichain.ChainType destinationChainType = 2;
  string destinationChainId = 3; 
  uint64 eventNonce = 4;
  uint64 blockHeight = 5;
  uint64 outboundTxNonce = 6;
  string outboundTxRequestedBy = 7;   
  string relayerRouterAddress = 8;
  string destinationTxHash = 9;
  uint64 feeConsumed = 10;
  bytes contractAckResponses = 11;
  uint64 exeCode = 12;
  bool execStatus = 13;
  repeated bool execFlags = 14;
  repeated bytes execData = 15;  
  OutgoingTxStatus status = 16;   
}

message EventOutgoingTxFeeSettlement {  
  routerprotocol.routerchain.multichain.ChainType destinationChainType = 1;  
  string destinationChainId = 2; 
  string outgoingBatchSender = 3; 
  uint64 outgoingBatchNonce = 4; 
  cosmos.base.v1beta1.Coin relayerFeeInRoute = 5 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin refundFeeInRoute = 6 [(gogoproto.nullable) = false];
}

message EventOutgoingAckReadyToExecute {  
  routerprotocol.routerchain.multichain.ChainType chainType = 1; 
  string chainId = 2; 
  uint64 eventNonce = 3;   
  bytes claimHash = 4;
  cosmos.base.v1beta1.Coin txFeeInRoute = 5 [(gogoproto.nullable) = false];
}

message EventOutgoingAckExecuted {
  bytes attestation_id = 1;
  routerprotocol.routerchain.multichain.ChainType chainType = 2;
  string chainId = 3; 
  uint64 eventNonce = 4;
  bytes delegationResponse = 5;
}

message EventOutgoingAckExecutionFailed {
  bytes attestation_id = 1;
  routerprotocol.routerchain.multichain.ChainType chainType = 2;
  string chainId = 3; 
  uint64 eventNonce = 4;
  string delegationErrorResponse = 5;
}
